--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             webhookUrl: 'https://visionbi.app.n8n.cloud/webhook/d6b606df-0771-492f-bb9b-a2875e8dc864/chat',
             mode: 'window', // ou 'fullscreen'
             chatInputKey: 'chatInput', // Chave para input do usuário (conforme AI Agent)
-            chatSessionKey: 'sessionID', // Chave para ID da sessão (conforme Simple Memory)
+            chatSessionKey: 'sessionId', // Alterado para 'sessionId' com 'd' minúsculo
             initialMessages: [
                 'Olá! Eu sou a Anton.IA, assistente virtual do Seringal Lab.',
                 'Como posso ajudar você hoje?'
