Seção sobre adicionada

--- a/index.html
+++ b/index.html
@@ -167,6 +167,25 @@
         </div>
     </section>
 
+    <!-- Seção Sobre -->
+    <section id="sobre" data-aos="fade-up">
+        <div class="initiatives-title" data-aos="fade-up">
+            <h1>Sobre o SeringalLab</h1>
+            <hr>
+        </div>
+        <div class="about-section-grid">
+            <div class="about-text-content" data-aos="fade-right">
+                <h2></h2>
+                <p>O SeringalLab é o Laboratório de Inovação do Ministério Público do Estado do Acre. Nossa missão é cultivar um ambiente de criatividade e colaboração, onde novas ideias, métodos e tecnologias são explorados para transformar o serviço público.</p>
+                <p>Atuamos como um catalisador para a modernização, desenvolvendo soluções que otimizam processos, aumentam a eficiência e melhoram o acesso à justiça para todos os cidadãos.</p>
+                <a href="#contato" class="saiba-mais-btn about-btn">Fale Conosco</a>
+            </div>
+            <div class="about-image-content" data-aos="fade-left">
+                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c7da?auto=format&fit=crop&w=1170" alt="Equipe SeringalLab em colaboração">
+            </div>
+        </div>
+    </section>
+
     <!-- Seção Destaque com Carrossel -->
     <section id="destaque" data-aos="fade-up">
         <!-- Título "Destaque" -->
@@ -272,9 +291,6 @@
             </form>
         </div>
     </section>
-
-    <!-- Seção vazia para "sobre" -->
-    <section id="sobre"></section>
 
     <!-- Botão Voltar ao Topo -->
     <div class="back-to-top" aria-label="Voltar ao topo">
