Seção sobre adicionada/ afastamento do título para o conteúdo

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <a href="#contato" class="saiba-mais-btn about-btn">Fale Conosco</a>
             </div>
             <div class="about-image-content" data-aos="fade-left">
-                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c7da?auto=format&fit=crop&w=1170" alt="Equipe SeringalLab em colaboração">
+                <img src="https://static.wixstatic.com/media/c96204_ab52ba88809f4f6381bb648d233afc40~mv2.png" alt="Equipe SeringalLab em colaboração">
             </div>
         </div>
     </section>
