Alterações feitasnas páginas, excluindo botões e adiciinando links aos botões que ficaram. Atualização dos destaques do blog na página index

--- a/anton-ia.html
+++ b/anton-ia.html
@@ -27,7 +27,7 @@
             <li><a href="index.html#sobre">Sobre</a></li>
             <li><a href="index.html#iniciativas">Iniciativas</a></li>
             <li><a href="index.html#destaque">Destaques</a></li>
-            <li><a href="index.html#blog">Blog</a></li>
+            <li><a href="https://seringallab.mpac.mp.br/noticias/" target="_blank">Blog</a></li>
             <li><a href="index.html#contato">Contato</a></li>
         </ul>
         <div class="search-container">
@@ -42,7 +42,7 @@
             <!-- Usar a imagem da iniciativa como fundo -->
             <h1>Anton.IA</h1>
             <p class="hero-description">A assistente inteligente do MPAC.</p>
-            <button class="initiative-hero-btn">Acessar Anton.IA</button>
+           
         </section>
 
         <!-- Seção Sobre a Iniciativa -->
