--- a/consultoria-de-inovacao.html
+++ b/consultoria-de-inovacao.html
@@ -25,7 +25,7 @@
             <li><a href="index.html#sobre">Sobre</a></li>
             <li><a href="index.html#iniciativas">Iniciativas</a></li>
             <li><a href="index.html#destaque">Destaques</a></li>
-            <li><a href="index.html#blog">Blog</a></li>
+            <li><a href="https://seringallab.mpac.mp.br/noticias/" target="_blank">Blog</a></li>
             <li><a href="index.html#contato">Contato</a></li>
         </ul>
         <div class="search-container">
