--- a/seringalpedia.html
+++ b/seringalpedia.html
@@ -25,7 +25,7 @@
             <li><a href="index.html#sobre">Sobre</a></li>
             <li><a href="index.html#iniciativas">Iniciativas</a></li>
             <li><a href="index.html#destaque">Destaques</a></li>
-            <li><a href="index.html#blog">Blog</a></li>
+            <li><a href="https://seringallab.mpac.mp.br/noticias/" target="_blank">Blog</a></li>
             <li><a href="index.html#contato">Contato</a></li>
         </ul>
         <div class="search-container">
@@ -39,7 +39,7 @@
         <section class="initiative-hero" style="background-image: url('https://static.wixstatic.com/media/c96204_6254ffdbbab64dfbb909b7fa26ee3934~mv2.png');" data-aos="fade-in">
             <h1>Seringalpedia</h1>
             <p class="hero-description">A enciclopédia do SeringalLab.</p>
-            <button class="initiative-hero-btn">Explorar a Base</button>
+            <a href="https://seringalpedia.mpac.mp.br/" target="_blank" class="initiative-hero-btn">Explorar a Base</a>
         </section>
 
         <!-- Seção Sobre a Iniciativa -->
