correções no botões das páginas

--- a/seringal-link.html
+++ b/seringal-link.html
@@ -39,7 +39,7 @@
         <section class="initiative-hero" style="background-image: url('https://static.wixstatic.com/media/c96204_6254ffdbbab64dfbb909b7fa26ee3934~mv2.png');" data-aos="fade-in">
             <h1>Seringal Link</h1>
             <p class="hero-description">Transforme links longos em atalhos inteligentes.</p>
-            <button class="initiative-hero-btn">Criar Link Curto</button>
+            <a href="https://sl.mpac.mp.br/login" target="_blank" class="initiative-hero-btn">Criar Link Curto</a>
         </section>
 
         <!-- Seção Sobre a Iniciativa -->
