alteração no texto sobre o seringal lab

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
         <div class="about-section-grid">
             <div class="about-text-content" data-aos="fade-right">
                 <h2></h2>
-                <p>O SeringalLab é o Laboratório de Inovação do Ministério Público do Estado do Acre. Nossa missão é cultivar um ambiente de criatividade e colaboração, onde novas ideias, métodos e tecnologias são explorados para transformar o serviço público.</p>
-                <p>Atuamos como um catalisador para a modernização, desenvolvendo soluções que otimizam processos, aumentam a eficiência e melhoram o acesso à justiça para todos os cidadãos.</p>
+                <p>O SeringalLab é o laboratório de inovação do Ministério Público do Estado do Acre. Nossa missão é criar soluções inovadoras de forma colaborativa, reunindo pessoas, ideias e tecnologias para enfrentar os desafios do serviço público com criatividade e estratégia.</p>
+                <p>Mais do que desenvolver ferramentas ou otimizar processos, nosso propósito é transformar a cultura institucional, estimulando novas formas de pensar, agir e se relacionar com a sociedade. Atuamos como um espaço de experimentação, aprendizado contínuo e construção conjunta, com o objetivo de tornar o Ministério Público mais eficiente, acessível e conectado com as necessidades reais dos cidadãos.</p>
                 <a href="#contato" class="saiba-mais-btn about-btn">Fale Conosco</a>
             </div>
             <div class="about-image-content" data-aos="fade-left">
