imagens dos testimonials adicionados

--- a/bora.html
+++ b/bora.html
@@ -86,17 +86,17 @@
             <h2 class="section-title">Conexões que Inspiram</h2>
             <div class="testimonials-grid">
                 <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
-                    <img src="https://static.wixstatic.com/media/c96204_6ccee48e339541f8a58b9dbc0b7a3308~mv2.png" alt="Foto Analista">
+                    <img src="https://static.wixstatic.com/media/c96204_0600a2720fc6468ca61b914a9471ea5c~mv2.png" alt="Foto Analista">
                     <div class="testimonial-text">
                         <p>"Foi muito satisfatório poder trabalhar, dar a minha contribuição com a parte de gravação e edição de áudios. isso é algo que enriquece a instituição, fortalece ainda mais o trabalho de servidores que têm essa expertise de facilitar o trabalho dos demais colegas."</p>
                         <cite>- Jean Silva - Comunicação</cite>
                     </div>
                 </div>
                 <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
-                    <img src="https://static.wixstatic.com/media/c96204_6ccee48e339541f8a58b9dbc0b7a3308~mv2.png" alt="Foto Técnico">
+                    <img src="https://static.wixstatic.com/media/c96204_7dd6ab9a11e543e1b724c1205e42f0ad~mv2.png" alt="Foto Técnico">
                     <div class="testimonial-text">
                         <p>"Fui apresentada ao Bora! logo que cheguei no MPAC, no curso de formação dos servidores e já me interessei. Na primeira semana de trabalho fiz minha inscrição. A equipe SeringalLad descobriu um talento que eu nem sabia que tinha e assim colaboro com iniciativas inovadoras."</p>
-                        <cite>- Vivian Silva</cite>
+                        <cite>- Vivian Silva - Analista Ministerial</cite>
                     </div>
                 </div>
             </div>
