--- a/seringalpedia.html
+++ b/seringalpedia.html
@@ -94,10 +94,10 @@
                     </div>
                 </div>
                 <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
-                    <img src="https://static.wixstatic.com/media/c96204_6d15cbebe9d44c9f87d8548719f54092~mv2.png" alt="Foto Colaborador 2">
+                    <img src="https://static.wixstatic.com/media/c96204_52ba6ddd6431488ab1ed2bf28a123047~mv2.png" alt="Foto Colaborador 2">
                     <div class="testimonial-text">
                         <p>"Documentar o aprendizado dos projetos na Seringalpedia evita que outros cometam os mesmos erros."</p>
-                        <cite>- Gestor de Projetos</cite>
+                        <cite>- Antônio Anerão</cite>
                     </div>
                 </div>
             </div>
